# Pikuma_2DGameEngine-CPP

./: 2dge  CMakeLists.txt  Makefile  compile_commands.json
.cache/clangd/index/: Game.h.38CA7B23D411EEB6.idx  Game.h.B2F6C1FFBDEF9813.idx  _fixes.hpp.84E94C487EDEEB8C.idx  _vectorize.hpp.5F638F1F32987616.idx  common.hpp.7C97718C3A2FEDB8.idx  compute_common.hpp.4B6456B77B4385AA.idx  compute_vector_relational.hpp.89CF11C71B119423.idx  exponential.hpp.497E0B765A8641A9.idx  func_common.inl.218C1F716CDC5C6E.idx  func_exponential.inl.F44F1762A41AEF58.idx  func_geometric.inl.51DAAC0956301DAA.idx  func_integer.inl.3A7BAE501F8CC7C3.idx  func_matrix.inl.CC067C1E28DBA694.idx  func_packing.inl.258115C55A72BF82.idx  func_trigonometric.inl.D08C3CA7E4AD902D.idx  func_vector_relational.inl.6F45008FF289CD0F.idx  fwd.hpp.235D26AB41557798.idx  geometric.hpp.B7AA0A314CFBAEAD.idx  glm.hpp.C1BC6B24EA8C4E3C.idx  imconfig.h.AADEE9CBD4D46E68.idx  imgui.h.4D631893F8FE29B2.idx  integer.hpp.46B0B7D3B3C8FA6E.idx  lauxlib.h.A62C42A24AA301EF.idx  lua.h.49876644E0FC3B7B.idx  lua.hpp.CD2E140D78F57F27.idx  luaconf.h.95E1BCF98A66261C.idx  lualib.h.70A3BB7CACEAF6C6.idx  main.cpp.06C5ECA1EBCC8EA8.idx  main.cpp.268709F94C97E63F.idx  mat2x2.hpp.FCFB21031A7A331C.idx  mat2x3.hpp.4C1D2B5E1C3F9858.idx  mat2x4.hpp.C9D325B8CFE99D3E.idx  mat3x2.hpp.D5E142638A1B956E.idx  mat3x3.hpp.AD81B4205019CEEF.idx  (+109 more)
src/: Game.cpp  Game.h  Logger.cpp  Logger.h  Main.cpp
src/Components/: TransformComponent.h
src/ECS/: ECS.cpp  ECS.h
src/Game/: Game.cpp  Game.h
src/Logger/: Logger.cpp
src/Systems/: MovementSystem.h
